# CodeCom-Continue-

./: .env.example  .gitignore  EXAMPLE_USAGE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_SANDBOX.md  README.md  SANDBOX_FEATURE.md  pyproject.toml  test_sandbox.py
app/: cli.py  main.py
app/core/: agent_loop.py  config.py  tool_parser.py  tool_schemas.py
app/tools/: dispatcher.py  filesystem.py  sandbox.py  shell.py
